working on fixing white space

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -11,7 +11,7 @@ body, HTML {
 
 #introtext {
     position: absolute;
-    left: 0;
+    --left: 0;
     right: 0;
     top: 35%;
     width: 120%;
